# Insight-hackhorizon

./: .env.example  .gitignore  .replit  Dockerfile  Makefile  README.md  REPLIT.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: agent_workflow.py  audit.py  auth.py  config.py  db.py  issue_detail.py  leaderboard.py  main.py  models.py  orchestrator.py  rules.py  schemas.py  services.py  sla.py  startup.py  static_files.py
backend/app/a2a/: __init__.py  bus.py  coordinator.py  pipeline_emit.py  registry.py  types.py
backend/app/agentic/: __init__.py  chat_llm.py  conversational.py  coordinator.py  critic_insight.py  investigator.py  loop.py  references.py  store.py  stream.py  tools.py  triggers.py  types.py
backend/app/agents/: assistant.py  clustering.py  critic.py  detection.py  explainability.py  ingestion.py  insight.py  output.py  planner.py  retrieval.py  root_cause.py  scoring.py  translation.py
backend/app/connectors/: base.py  file.py  graph_stub.py  registry.py  seed.py
backend/app/metrics/: accuracy.py
backend/app/providers/: insight_llm.py  lang_detect.py  translator.py
backend/app/reports/: generator.py
backend/tests/: conftest.py  helpers.py  test_a2a.py  test_agentic.py  test_api_e2e.py  test_assistant.py  test_auth.py  test_clustering.py  test_detection.py  test_explainability.py  test_ingestion.py  test_insight.py  test_issue_detail.py  test_leaderboard.py  test_orchestrator.py  test_output.py  test_root_cause_sla.py  test_scoring.py  test_services.py  test_translation.py
(+71 files in other folders)
