[project]
name = "insight-backend"
version = "0.1.0"
description = "Guest Feedback Intelligence Agent — Cinema Operations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast isolated unit tests (no HTTP)",
    "integration: DB + orchestrator integration tests",
    "e2e: HTTP API end-to-end tests via TestClient",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
